phpIpam/01-mariadb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: phpipam-mariadb
  namespace: phpipam
spec:
  serviceName: phpipam-mariadb
  replicas: 1
  selector:
    matchLabels:
      app: phpipam-mariadb
  template:
    metadata:
      labels:
        app: phpipam-mariadb
    spec:
      containers:
        - name: phpipam-mariadb
          image: mariadb:latest
          volumeMounts:
            - name: phpipam-db-data
              mountPath: /var/lib/mysql
      volumes:
        - name: phpipam-db-data
          persistentVolumeClaim:
            claimName: phpipam-db-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: phpipam-mariadb
  namespace: phpipam
spec:
  selector:
    app: phpipam-mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
