phpIpam/02-phpipam-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpipam-web
  namespace: phpipam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpipam-web
  template:
    metadata:
      labels:
        app: phpipam-web
    spec:
      containers:
        - name: phpipam-web
          image: phpipam/phpipam-www:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: phpipam-logo
              mountPath: /phpipam/css/images/logo
            - name: phpipam-ca
              mountPath: /usr/local/share/ca-certificates
              readOnly: true
      volumes:
        - name: phpipam-logo
          emptyDir: {}
        - name: phpipam-ca
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: phpipam-web
  namespace: phpipam
spec:
  selector:
    app: phpipam-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
