phpIpam/03-phpipam-cron.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpipam-cron
  namespace: phpipam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpipam-cron
  template:
    metadata:
      labels:
        app: phpipam-cron
    spec:
      containers:
        - name: phpipam-cron
          image: phpipam/phpipam-cron:latest
          volumeMounts:
            - name: phpipam-ca
              mountPath: /usr/local/share/ca-certificates
              readOnly: true
      volumes:
        - name: phpipam-ca
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: phpipam-cron
  namespace: phpipam
spec:
  selector:
    app: phpipam-cron
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
