phpIpam/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpipam-ingress
  namespace: phpipam
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "100M"
spec:
  ingressClassName: nginx
  rules:
  - host: ipam.str.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpipam-web
            port:
              number: 80
