phpIpam/05-default-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpipam-web-ingress
  namespace: phpipam
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: phpipam-web
      port:
        number: 80
